# mlb-db-analysis

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 1.0 - Statcast Exploration.ipynb  2.0 - Hit Probability.ipynb  3.0 - Launch Angle Profiles.ipynb  4.0 - Home Run Rates.ipynb  5.0 - Batted Ball Profile.ipynb  6.0 - Fastball Effectiveness.ipynb  6.0 - Pitch Movement and Effectiveness, Fastballs.ipynb  6.1 - Pitch Movement and Effectiveness, Sliders.ipynb  7.0 - Expected Pitch Effectiveness.ipynb  8.0 - Launch Angle Tightness.ipynb
python-graveyard/: batter_zone_contour.py
sql/: batter_ball_distribution.sql  batter_exit_velocity.sql  batter_rates.sql  estimated_pitch_effectiveness.sql  fastball_effectiveness.sql  launch_angle_stdev.sql  notebook_events.sql  pitcher_velocity.sql  stolen_base_opportunities.sql
